<resources>
    <string name="app_name">Lost And Found App CS230</string>
    <string name="create_an_account">Create an Account</string>
    <string name="iitp_logo">IITP Logo</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="post_for_n_lost_items">Post for\n Lost Items</string>
    <string name="post_for_n_found_items">Post for\n Found Items</string>
    <string name="check_feed_nof_lost_items">Check Feed \nof Lost Items</string>
    <string name="check_feed_nof_found_items">Check Feed \nof found Items</string>
    <string name="post_for_lost_item">Post For Lost Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">App Logo</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="post_for_found_item">Post for Found Item</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="where_lost">Where Lost?</string>
    <string name="select_images">SELECT IMAGES</string>
    <string name="post_images">Post Images</string>
    <string name="submit">Submit</string>
    <string name="lost_item_image_1">Lost Item Image 1</string>
    <string name="lost_item_image_2">Lost Item Image 2</string>
    <string name="lost_item_image_3">Lost Item Image 3</string>
    <string name="lost_item_image_4">Lost Item Image 4</string>
    <string name="lost_item_image_5">Lost Item Image 5</string>
    <string name="upload_images">Upload Images</string>
    <string name="please_upload_images_before_clicking_submit">Please Upload Images before clicking submit</string>
    <string name="profile_placeholder">Profile PlaceHolder</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="lost_amp_found"><![CDATA[Lost & Found]]></string>
    <string name="claim">Claim !</string>
    <string name="i_found_it">I found It!</string>
    <string name="please_upload_image_before_submitting">Please Upload Image before submitting</string>
    <string name="found_items">Found Items</string>
    <string name="lost_items">Lost Items</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email ID</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="where_found">Where Found?</string>
</resources>