<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/PostLostCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/lightest_shade"
            android:text="@string/post_for_n_lost_items"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/PostFoundCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PostLostCard"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/lightest_shade"
            android:text="@string/post_for_n_found_items"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/FeedLostCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PostFoundCard"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/lightest_shade"
            android:text="@string/check_feed_nof_lost_items"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/FeedFoundCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FeedLostCard"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/lightest_shade"
            android:text="@string/check_feed_nof_found_items"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>