<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">
                <Button
                    android:id="@+id/PostLostCard"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/post_for_n_lost_items"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/lightest_shade"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/PostFoundCard"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/post_for_n_found_items"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/lightest_shade"
                    android:textColor="@color/black"
                    android:layout_below="@+id/PostLostCard"/>

                <Button
                    android:id="@+id/FeedLostCard"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/check_feed_nof_lost_items"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/lightest_shade"
                    android:textColor="@color/black"
                    android:layout_below="@+id/PostFoundCard"/>

                <Button
                    android:id="@+id/FeedFoundCard"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/check_feed_nof_found_items"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/lightest_shade"
                    android:textColor="@color/black"
                    android:layout_below="@+id/FeedLostCard"/>
        </RelativeLayout>
</RelativeLayout>
