<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/PostLostLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:id="@+id/post_lost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="50"
                            android:background="@color/darkest_shade"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/post_for_found_item"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="25sp"
                            tools:ignore="InefficientWeight,TextContrastCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/PostLostLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/PostLostLayout"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/post_lost_name"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:autofillHints="Name"
                                android:drawablePadding="15dp"
                                android:hint="@string/name"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingStart="8dp"
                                android:paddingTop="12dp"
                                android:paddingBottom="1dp"
                                android:scaleType="centerCrop"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlSymmetry"
                                tools:text="@tools:sample/cities" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/post_lost_number"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:autofillHints="Phone Number"
                                android:drawablePadding="16dp"
                                android:hint="@string/phone_number"
                                android:inputType="number"
                                android:maxLines="1"
                                android:paddingStart="8dp"
                                android:paddingTop="12dp"
                                android:paddingBottom="1dp"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlSymmetry"
                                tools:text="@tools:sample/us_phones" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/post_lost_message"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:autofillHints="Message"
                                android:drawablePadding="16dp"
                                android:hint="@string/message"
                                android:inputType="textMultiLine"
                                android:maxLines="3"
                                android:paddingStart="8dp"
                                android:paddingTop="12dp"
                                android:paddingBottom="1dp"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlSymmetry"
                                tools:text="@tools:sample/lorem/random" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/post_lost_where"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:autofillHints="Message"
                                android:drawablePadding="16dp"
                                android:hint="@string/where_lost"
                                android:inputType="textMultiLine"
                                android:maxLines="3"
                                android:paddingStart="8dp"
                                android:paddingTop="12dp"
                                android:paddingBottom="1dp"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                tools:ignore="RtlSymmetry"
                                tools:text="@tools:sample/lorem/random" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/post_lost_select"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:backgroundTint="@color/lightest_shade"
                            android:drawablePadding="16dp"
                            android:fontFamily="sans-serif-medium"
                            android:paddingStart="8dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/select_images"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            tools:ignore="RtlSymmetry" />

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />

                        <Button
                            android:id="@+id/post_lost_photo"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:backgroundTint="@color/lightest_shade"
                            android:drawablePadding="16dp"
                            android:hint="@string/post_images"
                            android:paddingStart="8dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:textColor="#fff"
                            android:textColorHint="@color/black"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />

                        <Button
                            android:id="@+id/Btn_post_lost_submit"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="50"
                            android:backgroundTint="@color/darkest_shade"
                            android:gravity="center_horizontal"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/submit"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>